--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,19 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
-  ]
+    
+    
+  ],
+      "headers": [
+        {
+          "source": "/(.*)", 
+          "headers": [
+            {
+              "key": "Content-Security-Policy",
+              "value": "default-src 'self'; script-src 'self' https://vercel.live; img-src 'self' data:; style-src 'self' 'unsafe-inline';"
+            }
+          ]
+        }
+      ]
+    
 }
